feat: Assimp Skeletal Animation